# stringdbpy

./: .dockerignore  .gitignore  .lintr  AGENTS.md  CLAUDE.md  LICENSE.txt  Makefile  README.md  app.yml  dispatch.py  executable_STRING_GSEA.xml  noxfile.py  pyproject.toml  run.sh  workunit_definition.yml
.github/: dependabot.yml
.github/workflows/: code_quality.yml  docker_publish.yml  docs_validation.yml  run_unit_tests.yml
TODO/: DONE_summary.md  TODO_bfabric_integration.md  TODO_code_cleanup.md  TODO_code_review.md  TODO_data_structures.md  TODO_improve_plotting_api.md  TODO_serialization.md
TODO/Archive/: TODO_update_tests.md
data/mappings/: NCBI_zip_README.md
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  install_r_packages.R  string_gsea_docker.sh
docs/: .gitignore  CircularGraph.qmd  ErDiagram.puml  ErDiagram_Normalized.puml  STRING_ORA_API.md  VisualizeMultipleContrastsGSEA.qmd  VisualizeNetworks.html  VisualizeNetworks.ipynb  VisualizeNetworks.qmd  _quarto.yml  index.qmd  network_demo.html  network_with_widgets.html  some.sh
docs/marimo_notebooks/: QUICKSTART.md  getting_started.py  gsea_exploration.py
docs/python_notebooks/: CircularGraph.qmd  VisualizeNetworks.ipynb
scripts/: dose_enrich_internal_test.R  enrichResultfromScratch.R  v3.R
src/: __init__.py
src/a373_string_gsea/: get_species.py  postprocess.py  ranksFromDEAXLSX.py  run_string_gsea.py  stringgsea.py  taxon_utils.py
src/string_gsea/: TermNetworkBuilder.py  TermNetworkPlotter.py  __about__.py  __init__.py  cluster_genesets.py  config.py  dotplot_endrichment.py  get_species.py  gsea_config.py  gsea_plotting.py  gsea_result_processor.py  gsea_session.py  gsea_utilities.py  network.py  packaging.py  postprocess.py  ranks_from_dea_xlsx.py  run_string_gsea.py  run_string_gsea_bfabric.py  species_detection.py  string_api_client.py  string_gsea.py  string_gsea_builder.py  string_gsea_results.py  taxon_utils.py
src/string_gsea/docs/: VisualizeMultipleContrastsGSEA.qmd  VisualizeNetworks.qmd  _quarto-multiple.yml  _quarto-single.yml  _quarto.yml  index.qmd  index_multiple.qmd  index_single.qmd
src/string_gsea/docs/python_notebooks/: CircularGraph.qmd
src/string_gsea/marimo_reports/: __init__.py  _report_utils.py  report_index.py  report_multiple.py  report_networks.py
src/string_gsea/models/: gsea_models.py
src/string_gsea/scripts/: render_marimo_reports.py  render_reports.py  run_workflow.py  string_gsea_bfabric.py  string_gsea_run.py  string_ora_run.py  write_config.py
src/string_gsea/workflow/: Snakefile  helpers.py
stringGSEAplot/: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  Makefile  NAMESPACE
stringGSEAplot/R/: build_compareClusterResult.R  build_enrichResult.R  build_gseaResult.R  read_gsea_json.R
stringGSEAplot/inst/templates/: .gitignore  SKILL_FGCZ_report.md  index.qmd
stringGSEAplot/man/: build_compareClusterResult.Rd  build_enrichResult.Rd  build_gseaResult.Rd  read_gsea_json.Rd  resolve_gene_ids.Rd
stringGSEAplot/tests/: testthat.R
stringGSEAplot/tests/testthat/: test-read_gsea_json.R
stringGSEAplot/vignettes/: GSEA_report.qmd  enrichplot-visualization.Rmd
tests/: README.md  Snakefile  conftest.py  helpers.py  test_builder.py  test_config.py  test_config_integration.py  test_diff_xlsx.py  test_diff_xlsx_integration.py  test_get_species.py  test_gsea_results.py  test_gsea_session.py  test_gsea_utilities.py  test_models.py  test_network.py  test_prep_data_input.py  test_render_reports.py  test_result_processor.py  test_results_write.py  test_run_string_gsea.py  test_string_api_client.py  test_stringgsea.py  test_taxon_utils.py  test_workflow_integration.py
tests/data/: .gitignore
tests/data/WU_abcd_GSEA/: serialized_gsea_session.json
tests/data/datasets/: .gitignore
tests/data/datasets/human_rnk_2848501/: params.yml
tests/data/datasets/mouse_xlsx/: params.yml
tests/data/datasets/yeast_rnk/: params.yml
tests/data/dummy_d/: params.yml  serialized_gsea_session.json  session.yml
tests/data/fixtures/dummy_output/WU_abcd_GSEA/from_rnk/: WUabcd_string_gsea_results_long.xlsx
