[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "string-gsea"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = []
authors = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
    "bfabric",
    'bfabric-scripts',
    'cyclopts',
    'fastexcel[pyarrow,polars]',
    'IPython',
    'ipycytoscape',
    'loguru',
    'matplotlib',
    'networkx',
    'notebook>=7.4.1',
    'numpy',
    'pandas',
    "papermill",
    'plotly',
    "polars",
    "pyexcelerate",
    'pyvis',
    "pyyaml",
    "requests",
    'seaborn',
    'scipy',
    'tomli',
    'tomli_w',
    "upsetplot",
]

[project.optional-dependencies]
test = [
    "dirty-equals",
    "nox",
    "pytest",
    "pytest-mock",
]
notebooks = [
    "marimo",
]

[project.scripts]
"string_gsea_write_config" = "string_gsea.scripts.write_config:app"
"string_gsea_run" = "string_gsea.scripts.string_gsea_run:app"
"string_gsea_render_reports" = "string_gsea.scripts.render_reports:app"


[tool.hatch.version]
path = "src/string_gsea/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/string_gsea tests}"

[tool.hatch.build.targets.sdist]
include = [
  "src/string_gsea/data/mappings/*.zip",
  "src/string_gsea/docs/**/*.qmd",
  "src/string_gsea/docs/**/*.yml",
]

[tool.coverage.run]
source_pkgs = ["string_gsea", "tests"]
branch = true
parallel = true
omit = [
  "src/string_gsea/__about__.py",
]

[tool.coverage.paths]
string_gsea = ["src/string_gsea"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.uv]
reinstall-package = ["stringdbpy"]
