[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "string-gsea"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = []
authors = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
    "bfabric",
    'bfabric-scripts',
    'cyclopts',
    'fastexcel[pyarrow,polars]',
    'loguru',
    "polars",
    "pyexcelerate",
    "pyyaml",
    "requests",
    "snakemake",
    'tomli',
    'tomli_w',
]

[project.optional-dependencies]
test = [
    "dirty-equals",
    "nox",
    "pytest",
    "pytest-mock",
    "ruff",
]
[project.scripts]
"string_gsea_write_config" = "string_gsea.scripts.write_config:app"
"string_gsea_run" = "string_gsea.scripts.string_gsea_run:app"
"string_ora_run" = "string_gsea.scripts.string_ora_run:app"
"string_gsea_workflow" = "string_gsea.scripts.run_workflow:app"


[tool.hatch.version]
path = "src/string_gsea/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/string_gsea tests}"

[tool.hatch.build.targets.sdist]
include = [
  "src/string_gsea/data/mappings/*.zip",
  "src/string_gsea/workflow/Snakefile",
]

[tool.coverage.run]
source_pkgs = ["string_gsea", "tests"]
branch = true
parallel = true
omit = [
  "src/string_gsea/__about__.py",
]

[tool.coverage.paths]
string_gsea = ["src/string_gsea"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not integration'"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "integration: tests that make live STRING-DB API calls (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "W",      # pycodestyle warnings
    "A",      # flake8-builtins
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]

[tool.ruff.format]
quote-style = "double"

[tool.uv]
reinstall-package = ["stringdbpy"]
